# bedrockci

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: publish.yml  release.yml  rust.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: download.rs  list_servers.rs  mod.rs  run.rs  validate.rs
lib/: Cargo.toml  README.md
lib/src/: lib.rs  server.rs  server_path.rs  validate.rs
lib/src/download/: server.rs
