[package]
name = "bedrockci-cli"
version = "2.1.0"
description = "CLI tool for validating Minecraft Bedrock resource and behavior packs against a real server instance"
authors = ["Lauren 'Yharna' Hinchcliffe"]
license = "MIT"
repository = "https://github.com/laurhinch/bedrockci"
readme = "../README.md"
edition = "2024"

[[bin]]
name = "bedrockci"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
bedrockci = { path = "../lib" }
clap = { version = "4.5.39", features = ["cargo"] }
tokio = { version = "1.45.1", features = ["full"] }
colored = "3.0.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
