[package]
name = "bedrockci"
version = "1.0.0"
description = "Core library for validating Minecraft Bedrock resource and behavior packs"
authors = ["Lauren 'Yharna' Hinchcliffe"]
license = "MIT"
keywords = ["minecraft", "bedrock", "ci", "validation", "mcbe"]
categories = ["development-tools", "command-line-utilities"]
repository = "https://github.com/laurhinch/bedrockci"
edition = "2024"
readme = "README.md"

[dependencies]
anyhow = "1.0.98"
futures = "0.3.30"
reqwest = { version = "0.11.25", features = ["stream"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tempfile = "3.10.1"
thiserror = "1.0.57"
tokio = { version = "1.45.1", features = ["full"] }
zip = "0.6.6"
dirs = "5.0.1"
colored = "3.0.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
